# touchscreen-gestures

./: .gitignore  AGENTS.md  Cargo.toml  flake.nix  readme.md
conf/: example.toml
modules/home-manager/: touchscreen-gestures.nix
src/: accel.rs  actions.rs  config.rs  error.rs  lib.rs  main.rs  rotation_handler.rs  x11.rs  xrandr_handler.rs
src/actions/: keyboard.rs  mod.rs
src/config/: mod.rs  raw_config.rs
src/touch/: classifier.rs  mod.rs
