[package]
name = "touchscreen-gestures"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/dispanser/touchscreen-gestures"
keywords = ["touchscreen", "gestures", "libinput", "multitouch", "linux"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
ctrlc = { version = "3.4.5", features = ["termination"] }
evdev = { git = "https://github.com/emberian/evdev", branch = "main" }
input = "0.9.1"
log = {version = "0.4.22", features = ["kv"]}
miette = { version = "7.2.0", features = ["fancy"] }
nix = {version = "0.29", features = ["poll"]}
pretty_env_logger = "0.5"
thiserror = "2"
toml = "0.9.8"

industrial-io = "0.6.0"

zbus = "5.2.0"
tokio = { version = "1.42.0", features = ["full"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
